--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
     <head>
 
         <title>Laszon Gifts</title>
-        <link rel="stylesheet" href="/style.css">
+        <link rel="stylesheet" href="style.css">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
         <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -33,7 +33,7 @@
             </div>
 
             <div class="mobilehithere">
-                <img class="giftbox" src="/img/giftbox.svg" alt="">
+                <img class="giftbox" src="img/giftbox.svg" alt="">
                 <h1 class="mobilehitheretext">Hi There!</h1>
                 <P class="mobilehitheretext2">Thank you for choosing us...</P>
                
@@ -49,13 +49,13 @@
 
 
                 <a href="https://wa.me/917373787476">
-                    <img class="socialbutton" src="/img/button 01.svg" alt="WhatsApp">
+                    <img class="socialbutton" src="img/button 01.svg" alt="WhatsApp">
                 </a>
 
 
 
                 <a href="https://instagram.com/laszongifts?igshid=ZGUzMzM3NWJiOQ==">
-                    <img class="socialbutton" src="/img/button 02.svg" alt="Instagram ">
+                    <img class="socialbutton" src="img/button 02.svg" alt="Instagram ">
                     
                 </a>
 
@@ -63,18 +63,18 @@
 
 
                 <a href="https://www.facebook.com/profile.php?id=100091390716679&mibextid=ZbWKwL">
-                    <img class="socialbutton" src="/img/button 03.svg" alt="facebook ">
+                    <img class="socialbutton" src="img/button 03.svg" alt="facebook ">
                 </a>
 
                 <a href="http://laszon.com/">
-                    <img class="socialbutton" src="/img/button 04.svg" alt="website ">
+                    <img class="socialbutton" src="img/button 04.svg" alt="website ">
                 </a>
   
 
 
             </div>
 
-            <img class="logo" src="/img/logo-01.png" alt="">
+            <img class="logo" src="img/logo-01.png" alt="">
 
 
 
