--- a/index.html
+++ b/index.html
@@ -20,9 +20,9 @@
 
 
             <div class="nav">
-
-             <h1 class="callusnow"> Call Us Now : 7373787476 </h1>
-
+                
+                <a class="callusnow href="#"> Call Us Now : +917373787476 </a>
+                                            
             </div>
 
             <div class="hithere">
