--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 
             <div class="nav">
                 
-                <a class="callusnow href="#"> Call Us Now : +917373787476 </a>
+                <a class="callusnow" href="#"> Call Us Now : +917373787476 </a>
                                             
             </div>
 
