--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 
             <div class="nav">
                 
-                <a class="callusnow" href="tel:+91-737-378-7476"> Call Us Now : +917373787476 </a>
+                <a class="callusnow" href="tel:+91-737-378-7476"> Click To Call : +917373787476 </a>
                                             
             </div>
 
